--- a/main.html
+++ b/main.html
@@ -10,7 +10,28 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+<div class="main">
+	<header class="header">Shaw's News</header>
+	<div>
+		<div class="latest-news-section">
+			<ul>
+				<li>Article 1</li>
+				<li>Article 2</li>
+				<li>Article 3</li>
+			</ul>
+		</div>
+		<div>
+			<h2>Main Article</h2>
+			<p></p>
+		</div>
+		<div class="pictorial-news-section">
+			<h3>Pictorial News</h3>
+			<img src="" alt="top_image">
+			<img src="" alt="middle_image">
+			<img src="" alt="bottom_image">
+	    </div>
+	</div>
+</div>
 </body>
 
 </html>
