--- a/main.html
+++ b/main.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 
 <html>
-
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
@@ -12,23 +11,24 @@
 </script>
 <div class="main">
 	<header class="header">Shaw's News</header>
-	<div>
-		<div class="latest-news-section">
+	<div class="container">
+		<div class="latest-news-section common">
+			<h3>Latest News Article</h3>
 			<ul>
 				<li>Article 1</li>
 				<li>Article 2</li>
 				<li>Article 3</li>
 			</ul>
 		</div>
-		<div>
+		<div class="read_article common">
 			<h2>Main Article</h2>
-			<p></p>
+			<p>Cucumbers are a nutritious food with a high water content. They can help relieve dehydration and contain many important vitamins and minerals. Cucumbers may also benefit skin health.</p>
 		</div>
-		<div class="pictorial-news-section">
+		<div class="pictorial-news-section common">
 			<h3>Pictorial News</h3>
-			<img src="" alt="top_image">
-			<img src="" alt="middle_image">
-			<img src="" alt="bottom_image">
+			<img src="https://images.hindustantimes.com/img/2023/01/29/550x309/delhi_rains_1674974112847_1674981888135_1674981888135.jpeg" alt="top_image">
+			<img src="https://images.hindustantimes.com/img/2023/01/29/550x309/ADANI-INDIA-GAUTAM-ADANI-0_1675011651023_1675011651023_1675011672003_1675011672003.JPG" alt="middle_image">
+			<img src="https://images.hindustantimes.com/img/2023/01/29/550x309/FRANCE-REFORM-PENSIONS-31_1675022359706_1675022359706_1675022383851_1675022383851.JPG" alt="bottom_image">
 	    </div>
 	</div>
 </div>
